refactor: replace deprecated Locale constructor with Locale.of()
replace the deprecated 'new Locale(String, String)' constructor with the static factory method 'Locale.of(String, String)' introduced in Java 19. this ensures compatibility with modern Java standards and resolves deprecation warnings.